# Nexus-REC

./: .gitignore  LICENSE  README.ar.md  README.md  nexus_rec.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
modules/core/: cli.py  config.py  dependencies.py  module_loader.py  pipeline.py  reporter.py  summary.py
modules/data/: technologies.json
modules/exploit/: auth_security.py  business_logic.py  scanner.py
modules/recon/: admin_scan.py  apk_analysis.py  basic.py  cookies.py  dns.py  dns_detritus.py  endpoints.py  graphql.py  js.py  payment_gateway.py  secrets.py  subdomain.py  supabase_rpc.py  technologies.py  wellknown.py
modules/recon/fingerprint/: basic.py  technologies.py
modules/recon/infra/: admin_scan.py  azure_cloud.py  cloud.py  dns.py  email_recon.py  subdomain.py
modules/recon/web/: api_docs.py  backend_scan.py  cookies.py  cors.py  graphql.py  js.py  openapi.py  payment_gateway.py  registration_security.py  secrets.py  server_leaks.py
modules/stack/: atlassian.py  laravel.py  nextjs.py
tests/: smoke_tests.py
