[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nexus-rec"
version = "1.0.0"
description = "Intelligent Reconnaissance & Vulnerability Assessment Framework"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Ihsan Alapsi", email = "me@ihsanalapsi.dev"},
]
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "rich>=13.7.0",
    "urllib3>=2.0.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Arabic",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Networking",
]

[project.urls]
Homepage = "https://github.com/ihsanalapsi/Nexus-REC"
Repository = "https://github.com/ihsanalapsi/Nexus-REC.git"
Issues = "https://github.com/ihsanalapsi/Nexus-REC/issues"

[project.scripts]
nexus-rec = "nexus_rec:main"

[tool.setuptools.packages.find]
include = ["modules*"]

[tool.setuptools.package-data]
"*" = ["data/*.json"]
